force-app/main/default/objects/Account/fields/EmailMarketing__c.field-meta.xml
<CustomField>
    <fullName>EmailMarketing__c</fullName>
    <label>Email Marketing</label>
    <length>30</length>
    <type>Text</type>
</CustomField>