force-app/main/default/objects/Account/fields/Last_name__c.field-meta.xml
<CustomField>
    <fullName>Last_name__c</fullName>
    <label>Last name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>