force-app/main/default/objects/Account/fields/QualificacaoRDStation__c.field-meta.xml
<CustomField>
    <fullName>QualificacaoRDStation__c</fullName>
    <label>Qualificação RD Station</label>
    <length>15</length>
    <type>Text</type>
</CustomField>