force-app/main/default/objects/Account/fields/RDStationCampaign__c.field-meta.xml
<CustomField>
    <fullName>RDStationCampaign__c</fullName>
    <label>RD Station Campaign</label>
    <length>30</length>
    <type>Text</type>
</CustomField>