force-app/main/default/objects/Account/fields/RDStationQualification__c.field-meta.xml
<CustomField>
    <fullName>RDStationQualification__c</fullName>
    <label>RD Station Qualification</label>
    <length>30</length>
    <type>Text</type>
</CustomField>