force-app/main/default/objects/Account/fields/SizeAccount__c.field-meta.xml
<CustomField>
    <fullName>SizeAccount__c</fullName>
    <label>Potential Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Size</valueSetName>
    </valueSet>
</CustomField>